--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         display: inline-block;
     }
 
-    my-button button{
+    my-button button {
         background-color: tomato;
         padding: 10px;
     }
@@ -24,7 +24,8 @@
 </style>
 
 <body>
-    <my-button class="shiny"></my-button>
+    <my-button varient="primary" class="shiny"></my-button>
+    <my-button varient="secondary" class="shiny"></my-button varient="primary">
     <script>
         const element = document.getElementsByTagName('my-component')[0];
         // const element = document.getElementsByClassName('shiny')[0];
