--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
 </style>
 
 <body>
+    <template id="my-button-template">
+        <button>Click me!</button>
+        <style>
+            button {
+                border-radius: 10px;
+                padding: 15px;
+            }
+
+            .primary {
+                background-color: skyblue;
+            }
+
+            .secondary {
+                background-color: wheat;
+            }
+        </style>
+    </template>
+
     <my-button varient="primary" class="shiny"></my-button>
     <my-button varient="secondary" class="shiny"></my-button varient="primary">
     <script>
