--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
 <body>
     <template id="my-button-template">
-        <button>Click me!</button>
+        <button>
+            <slot name="msg-cta">Click default!</slot>
+        </button>
         <style>
             button {
                 border-radius: 10px;
@@ -42,8 +44,12 @@
         </style>
     </template>
 
-    <my-button varient="primary" class="shiny"></my-button>
-    <my-button varient="secondary" class="shiny"></my-button varient="primary">
+    <my-button varient="primary" class="shiny">
+        <span slot="msg-cta">Click me</span>
+    </my-button>
+    <my-button varient="secondary" class="shiny">
+        <span slot="msg-cta">Click secondary me</span>
+    </my-button varient="primary">
     <script>
         // const element = document.getElementsByTagName('my-component')[0];
         // const element = document.getElementsByClassName('shiny')[0];
